--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "mysql": "2.18.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start":"node index",
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
