--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lib": "lib"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "moment": "^2.24.0",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "request": "^2.88.2",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
